tests/baselines/reference/selfReferencingFile3.errors.txt
tests/cases/compiler/selfReferencingFile3.ts(1,1): error TS5006: A file cannot have a reference to itself.


==== tests/cases/compiler/selfReferencingFile3.ts (1 errors) ====
    ///<reference path='./selfReferencingFile3.ts'/>
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS5006: A file cannot have a reference to itself.
    
    class selfReferencingFile3 {
    
    }